--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~43.0.0",
     "expo-auth-session": "~3.4.2",
-    "expo-image-picker": "^11.0.3",
+    "expo-image-picker": "~11.0.3",
     "expo-random": "~12.0.1",
     "expo-status-bar": "~1.1.0",
     "firebase": "^9.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-alertbox": "^0.2.9",
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.10.0",
     "react-native-safe-area-context": "3.3.2",
